welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 0 to T.length-1)
               ^