welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var T = new Array[Int](500)
	for (i <- 0 to T.length-1)
		{T(i)=0}}